--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
                 <artifactId>sqlite-jdbc</artifactId>
                 <version>3.49.1.0</version>
             </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>2.24.1</version>
+        </dependency>
 
 
 
